--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,3 +57,17 @@ jobs:
           file: ./Dolacna.Webpage/Dockerfile
           push: true
           tags: "offli/webpage:${{ needs.calculate-version.outputs.semVer }},offli/webpage"
+
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: Deploy to Azure Container Apps
+        uses: azure/container-apps-deploy-action@v1
+        with:
+          app-name: webpage
+          resource-group: usetri
+          image: docker.io/offli/webpage:latest
