--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,11 +57,16 @@ jobs:
           file: ./Dolacna.Webpage/Dockerfile
           push: true
           tags: "offli/webpage:${{ needs.calculate-version.outputs.semVer }},offli/webpage"
-
+  az-login:
+    runs-on: ubuntu-latest
+    steps:
       - name: Log in to Azure
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+  az-deploy:
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy to Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
         with:
