--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
           tags: "offli/webpage:${{ needs.calculate-version.outputs.semVer }},offli/webpage"
   az-login:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Log in to Azure
         uses: azure/login@v2
@@ -66,6 +67,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
   az-deploy:
     runs-on: ubuntu-latest
+    needs: az-login
     steps:
       - name: Deploy to Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
