ci: add containerAppName to deploy, for which we have roles assigned

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,3 +83,4 @@ jobs:
         with:
           imageToDeploy: docker.io/offli/webpage:latest
           resourceGroup: Usetri
+          containerAppName: webpage
