--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,6 @@ jobs:
       - name: Deploy to Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
         with:
-          imageToDeploy: docker.io/offli/webpage:latest
+          imageToDeploy: docker.io/offli/webpage:${{ needs.calculate-version.outputs.semVer }}
           resourceGroup: Usetri
           containerAppName: webpage
