feat(csproj-build): build React app in csproj and install npm and nodejs in docker build stage

--- a/Dolacna.Webpage/Dockerfile
+++ b/Dolacna.Webpage/Dockerfile
@@ -5,6 +5,10 @@ EXPOSE 8080
 EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+# Run commands to install node - it is needed to execute npm commands in project's csproj file. Versions for alpine: https://pkgs.alpinelinux.org/packages?branch=edge&repo=&arch=&maintainer=
+RUN apk add --update nodejs npm
+RUN echo $(node -v && npm -v)
+
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Dolacna.Webpage/Dolacna.Webpage.csproj", "Dolacna.Webpage/"]
