test: is autodeploy working also when entra github-actions does not have any classic secret ?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
     paths:
       - 'Dolacna.Webpage/**'
       - '.github/workflows/ci.yml'
-permissions: # TODO 00 what is this
+permissions: # needed to deploy
   id-token: write
   contents: read
 jobs:
