--- a/Dolacna.Webpage/Dockerfile
+++ b/Dolacna.Webpage/Dockerfile
@@ -5,21 +5,46 @@ EXPOSE 8080
 EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
-# Run commands to install node - it is needed to execute npm commands in project's csproj file. Versions for alpine: https://pkgs.alpinelinux.org/packages?branch=edge&repo=&arch=&maintainer=
-RUN apk add --update nodejs npm
-RUN echo $(node -v && npm -v)
+# Install node, npm and build tools
+RUN apk add --no-cache curl nodejs npm
+# Install additional dependencies that may be needed for native modules
+RUN apk add --no-cache g++ make python3
 
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
+# Copy project files
 COPY ["Dolacna.Webpage/Dolacna.Webpage.csproj", "Dolacna.Webpage/"]
 RUN dotnet restore "Dolacna.Webpage/Dolacna.Webpage.csproj"
+
+# Copy the entire source
 COPY . .
 WORKDIR "/src/Dolacna.Webpage"
-RUN dotnet build "Dolacna.Webpage.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Clean any existing node_modules and install fresh
+RUN rm -rf ClientApps/webpage/node_modules
+RUN rm -rf ClientApps/webpage/package-lock.json
+
+# Install npm dependencies manually before dotnet build
+WORKDIR "/src/Dolacna.Webpage/ClientApps/webpage"
+RUN npm ci --force || npm install --force
+
+# Build the React app manually
+RUN npm run build:dev
+
+# Go back to main project directory
+WORKDIR "/src/Dolacna.Webpage"
+
+# Build the .NET project (npm tasks will be skipped since we already built the React app)
+RUN dotnet build "Dolacna.Webpage.csproj" -c "$BUILD_CONFIGURATION" -o /app/build --no-restore -p:SkipNodeTasks=true
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Dolacna.Webpage.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Dolacna.Webpage.csproj" \
+    -c "$BUILD_CONFIGURATION" \
+    -o /app/publish \
+    /p:UseAppHost=false \
+    -p:SkipNodeTasks=true
 
 FROM base AS final
 WORKDIR /app
