--- a/Dolacna.Webpage/ClientApps/webpage/package.json
+++ b/Dolacna.Webpage/ClientApps/webpage/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:docker": "vite build --mode development --config vite.config.docker.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -67,6 +68,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@rollup/rollup-linux-x64-gnu": "^4.9.6",
+    "@rollup/rollup-win32-x64-msvc": "4.44.2",
+    "@swc/core-linux-x64-gnu": "1.12.9",
+    "@swc/core-win32-x64-msvc": "1.12.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
@@ -79,7 +84,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.11",
