Refactor Docker build process and dependencies
- Updated Dockerfile to improve npm configuration and skip optional dependencies.
- Switched from SWC to regular React plugin in vite.config.ts to resolve native bindings issues.
- Updated package.json and package-lock.json to remove SWC and related native bindings, ensuring consistent versions.
- Simplified dependency installation in Dockerfile and ensured exact versions for Rollup.
- Enhanced documentation in DOCKER_FIX_SUMMARY.md to reflect changes and provide a clearer explanation of the final working solution.

--- a/Dolacna.Webpage/Dockerfile
+++ b/Dolacna.Webpage/Dockerfile
@@ -29,10 +29,19 @@ WORKDIR "/src/Dolacna.Webpage/ClientApps/webpage"
 # Set environment variables to help with npm issues
 ENV DOCKER_BUILD=true
 ENV NODE_ENV=development
-# Force npm to install all dependencies including missing native bindings
-RUN npm install --no-package-lock --legacy-peer-deps --force
-# Install missing native bindings explicitly
-RUN npm install @swc/core-linux-x64-gnu @rollup/rollup-linux-x64-gnu --save-dev --force
+
+# Create npm configuration to skip optional dependencies
+RUN echo "optional=false" > .npmrc
+RUN echo "omit=optional" >> .npmrc
+
+# Install dependencies without optional packages
+RUN npm install --omit=optional --legacy-peer-deps --force
+
+# Install exact versions of rollup native bindings for Linux
+RUN npm install rollup@4.44.2 --save-dev --force
+
+# Build the React app manually
+RUN npm run build:dev
 
 # Build the React app manually
 RUN npm run build:dev
