--- a/Dolacna.Webpage/ClientApps/webpage/package.json
+++ b/Dolacna.Webpage/ClientApps/webpage/package.json
@@ -68,15 +68,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@rollup/rollup-linux-x64-gnu": "^4.9.6",
+    "@rollup/rollup-linux-x64-gnu": "4.44.2",
     "@rollup/rollup-win32-x64-msvc": "4.44.2",
-    "@swc/core-linux-x64-gnu": "1.12.9",
-    "@swc/core-win32-x64-msvc": "1.12.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react": "4.6.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^10.1.1",
