--- a/Dolacna.Webpage/ClientApps/webpage/.gitignore
+++ b/Dolacna.Webpage/ClientApps/webpage/.gitignore
@@ -1,5 +1,17 @@
+
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+dist-ssr/
+
+# Vite cache
+.vite/
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +19,32 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# OS files
+.DS_Store
+Thumbs.db
+
+# Env files
+.env
+.env.*
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# TypeScript
+*.tsbuildinfo
+
+# Bun
+bun.lockb
+
+# Coverage
+coverage/
+
+# Misc
+*.local
