--- a/Dolacna.Webpage/ClientApps/webpage/package.json
+++ b/Dolacna.Webpage/ClientApps/webpage/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "build:docker": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prebuild": "node scripts/fetch-logo.mjs"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
